gccida/g2/get_attr_length_immediate
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14282:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14284:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 14632, "get_attr_length_immediate"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14284:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 14632, "get_attr_length_immediate"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14512:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( symbolic_operand( recog_data_0.operand[1], SImode) || ( unsigned int)( ( _DWORD)which_alternative - 4) <= 5 ) 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14514:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( flag_pic && symbolic_operand( recog_data_0.operand[1], SImode) ) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14565:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( aligned_operand( recog_data_0.operand[1], HImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14616:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( q_regs_operand( recog_data_0.operand[0], QImode) ) 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14638:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !flag_pic || !symbolic_operand( recog_data_0.operand[1], DImode) ) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14655:25: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !symbolic_operand( recog_data_0.operand[1], DImode) && ( unsigned int)( ( _DWORD)which_alternative - 4) > 4 ) 
                        ^~~~~~~~~~~~
                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14657:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( flag_pic && symbolic_operand( recog_data_0.operand[1], DImode) ) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14699:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| pic_symbolic_operand( recog_data_0.operand[2], DImode) ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14711:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], DImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14718:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| pic_symbolic_operand( recog_data_0.operand[2], SImode) ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14729:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| pic_symbolic_operand( recog_data_0.operand[2], SImode) ) 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14743:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], SImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14748:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], HImode) && ( _DWORD)which_alternative != 2 ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14758:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], HImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14763:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], QImode) && ( _DWORD)which_alternative != 3 ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/insn-attrtab.c:14773:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], QImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_attr_length_immediate/src/obj/insn-attrtab.o] Error 1
